[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pymeter"
readme = "README.md"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
authors = [
    "Kelvin.Ye <testmankelvin@163.com>"
]
packages = [
    { include = "pymeter" },
    { include = "pymeter/**/*.py" }
]
classifiers = [
    "Programming Language :: Python"
]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.11"
orjson = "3.10.5"
jsonpath = "0.82.2"
xmltodict = "0.13.0"
sqlalchemy = "2.0.31"
pyodbc = "5.1.0"
cx-oracle = "8.3.0"
psycopg2-binary = "2.9.9"
mysql-connector-python = "8.4.0"
sshtunnel = "0.4.0"
pycryptodome = "3.20.0"
python-engineio = "4.9.1"
python-socketio = "5.11.3"
ulid-py = "1.1.0"
arrow = "1.3.0"
faker = "26.0.0"
httpx = "0.27.0"
json5 = "0.9.25"
bidict = "0.23.1"
loguru = "0.7.2"
gevent = "24.2.1"
uvloop = "0.19.0"
pytypes = "1.0b10"
tabulate = "0.9.0"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
flask = "*"
pytest = "*"
pytest-html = "*"
pytest-asyncio = "*"
ruff = "*"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["pymeter"]
select = [
    "F",    # pyflakes
    "UP",   # pyupgrade
    "E",    # pycodestyle-error
    "W",    # pycodestyle-warning
    "D",    # pydocstyle
    "I",    # isort
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D415"
]
exclude = [
    "__pycache__",
    ".cache",
    ".vscode",
    "sql",
    "docs",
    "scripts",
    "ruff_cache"
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
force-single-line = true
lines-after-imports = 2
lines-between-types = 1

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = [
    "--color=auto",
    "--capture=tee-sys",
    "--code-highlight=yes",
    "--disable-warnings",
    "--html=report.html",
    "--self-contained-html"
]
log_cli = true
log_level = "DEBUG"
log_format = "[%(asctime)s][%(levelname)s][%(name)s.%(funcName)s:%(lineno)d] %(message)s"
filterwarnings = ["error", "ignore::DeprecationWarning"]
required_plugins = ["pytest-html"]
